<resources>
    <string name="app_name">Adidas Product Reviews</string>
    <string name="path_search">M141,17 A9,9 0 1,1 142,16 L149,23</string>
    <string name="product">Product</string>
    <string name="sample_price">$85.00</string>
    <string name="sample_product_name">Americana Graphic Tee</string>
    <string name="sample_product_description">Cream tee with a small logo</string>
    <string name="no_results">Oops - no results for</string>
    <string name="no_results_explanation">Don’t give up! Check the spelling or try something less specific.</string>
    <string name="sample_no_results">Oops - no results for \'test\'.</string>
    <string name="add_review">Add review</string>
    <string name="sample_review">I bought these for my wife who is a serious golfer. She absolutely loves the style, functionality, and comfort of these shoes. Definitely recommend.</string>
    <string name="recommends_this_product">Recommends this product</string>
    <string name="sample_username">yellowbutterfly466</string>
    <string name="sample_country">United Kingdom</string>
    <string name="sample_review_count">5 reviews</string>
    <string name="no_reviews_yet">No reviews yet</string>
    <string name="one_review">1 review</string>
    <string name="no_reviews_prompt">Did you buy this product? Leave the first review and let others know what you thought about it!</string>
    <string name="submit">Submit</string>
    <string name="loading">Loading...</string>
    <string name="no_internet">No internet connection. Please check your internet connection and try again.</string>
    <string name="connection_issue">Server issue</string>
    <string name="problem_loading_section">Hmm, it seems like we ran into a problem loading this section.</string>
    <string name="problem_loading_reviews">Hmm, it seems like we ran into a problem loading the reviews for this product.</string>
    <string name="failed_to_post_review">Failed to post review. Please try again later.</string>
    <string name="try_again"><u>Try again</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>