<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="start"
    android:background="@color/white"
    android:padding="10dp">

    <RatingBar
        android:id="@+id/rb_score"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        android:numStars="5"
        android:stepSize="0.1"
        android:theme="@style/RatingBar" />

    <TextView
        android:id="@+id/tv_text"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_review"
        android:textAllCaps="false"
        android:textSize="11sp"
        android:fontFamily="@font/itc_avant_garde_regular"
        android:textColor="@color/adidas_gray"
        android:letterSpacing="0.08"
        android:lineSpacingMultiplier="1.35"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:id="@+id/ll_recommended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_green_checkmark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/recommends_this_product"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:fontFamily="@font/itc_avant_garde_medium"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:letterSpacing="0.1"/>
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="12dp"
        android:background="@color/disabled_button"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:text="@string/sample_username"
            android:textAllCaps="true"
            android:textSize="11sp"
            android:textStyle="bold"
            android:fontFamily="@font/itc_avant_garde_medium"
            android:textColor="@color/black"
            android:letterSpacing="0.1"
            tools:ignore="SmallSp" />

        <View
            android:layout_marginStart="10dp"
            android:layout_width="2dp"
            android:layout_height="2dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/tv_country"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:text="@string/sample_country"
            android:textAllCaps="true"
            android:textSize="11sp"
            android:fontFamily="@font/itc_avant_garde_regular"
            android:textColor="@color/black"
            android:letterSpacing="0.1"
            tools:ignore="SmallSp"/>
    </LinearLayout>
</LinearLayout>